--- a/Jogo de Tabuleiro/index.html
+++ b/Jogo de Tabuleiro/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/card-Joker.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Balatro 2 kkkk</title>
   </head>
   <body>
     <div id="root"></div>
